--- a/ultimates/top.yaml
+++ b/ultimates/top.yaml
@@ -2293,7 +2293,7 @@ graphing:
       type: cone
       size: [0, 200]
       angle: 120
-      color: url(#aoe-pulse-cone)
+      color: url(#monitor-boom-gradient)
       opacity: 0.85
       visible: false
       shadow: false
@@ -2380,6 +2380,12 @@ graphing:
       size: 60
       shadow: false
       visible: false
+    kb:
+      type: image
+      image: /images/markers/circle-kb.svg
+      size: 130
+      scale: 0
+      opacity: 0.6
   graphs:
     looper:
       - marker-a: [60, 0]
@@ -2889,6 +2895,7 @@ graphing:
         marker-3: [63, -135]
         marker-d: [63, -90]
         marker-4: [63, -45]
+        kb: { attach: boss#F1 }
         boss#F1: { x: 16, y: 90, scale: 0.4, text: F }
         boss#F2: { visible: false, scale: 0.4, text: F }
         boss#M1: { x: 16, y: -90, scale: 0.4, text: M }
@@ -3072,7 +3079,8 @@ graphing:
         R2: { x: 12, y: 135, coordinate-system: polar }
         stack#1: { x: 12, y: -45, coordinate-system: polar }
         stack#2: { x: 12, y: 135, coordinate-system: polar }
-      - boss#F1: { scale: 0.6, visible: false }
+      - boss#F1: { scale: 0.6 }
+        kb: { scale: 1 }
         M1: { x: 88, y: -45, coordinate-system: polar }
         M2: { x: 88, y: -45, coordinate-system: polar }
         T1: { x: 88, y: -45, coordinate-system: polar }
@@ -3092,9 +3100,12 @@ graphing:
         circle#7: { x: 88, y: 135, scale: 0.9, coordinate-system: polar }
       - circle#1..5: { scale: 2, visible: true }
         circle#6..7: { visible: true }
+        kb: { visible: false }
+        boss#F1: { visible: false, scale: 0.4 }
       - circle#1..7: { visible: false }
         stack#1..2: { visible: false }
         boss#M*: { visible: false }
+        kb: { scale: 0 }
         T1: { status: [] }
         T2: { status: [] }
         H1: { status: [] }
@@ -3106,6 +3117,7 @@ graphing:
         glitch-link#*: { visible: false }
       - label: { text: Mid Glitch }
         rect#eye: { visible: false }
+        kb: { visible: true }
         circle#1..8: { visible: false }
         glitch-link#*: { visible: true }
         T1: { x: -60, y: 12, status: [circle], coordinate-system: cartesian }
@@ -3156,7 +3168,9 @@ graphing:
         R2: { x: 12, y: -45, coordinate-system: polar }
         stack#1: { x: 12, y: -45, coordinate-system: polar }
         stack#2: { x: 12, y: -135, coordinate-system: polar }
+        kb: { scale: 1 }
       - boss#F1: { scale: 0.6, visible: false }
+        kb: { visible: false }
         M1: { x: 70, y: -45, coordinate-system: polar }
         M2: { x: 70, y: -45, coordinate-system: polar }
         T1: { x: 70, y: -45, coordinate-system: polar }
@@ -4042,6 +4056,7 @@ graphing:
         rect-color#ring: { size: [57, 300], scale: [0, 1], rotate: 90, visible: true }
         boss#m: { text: M, size: 30, opacity: 0.6, rotate: 180 }
         boss#mf: { x: 90, y: -90, text: M, size: 30, opacity: 0.6, rotate: -90, visible: false }
+        kb: { attach: boss#mf }
         boss#beetle: { text: Beetle, x: 90, y: 90, size: 65, opacity: 0.6, rotate: 90, visible: false }
         boss#final: { text: Final, rotate: -90, size: 65, opacity: 0.6, visible: false }
         boss#ring: { text: Ring, size: 57, opacity: 0.6, rotate: 90, visible: false }
@@ -4136,11 +4151,13 @@ graphing:
         [R1, H2]: [16, 45]
         M2: [16, 0]
       - boss#mf: { scale: 1.3 }
+        kb: { scale: 1 }
         players: { x: 90 }
         tower#far-*: { color: url(#tower-filled-gradient) }
       - label: { text: Mid Glitch }
         tower#far-*: { visible: false }
         boss#mf: { x: 90, y: -90, scale: 1 }
+        kb: { visible: false }
         tower#mid-*: { visible: true }
         T2: [25, -135]
         M1: [25, 45]
@@ -4151,6 +4168,7 @@ graphing:
         R1: [25, -180]
         H1: [25, 0]
       - boss#mf: [0, 0]
+        kb: { scale: 0 }
         R2: [16, -67.5]
         M1: [16, -112.5]
         [H1, T2]: [16, 157.5]
@@ -4158,9 +4176,11 @@ graphing:
         R1: [16, 67.5]
         [M2, H2]: [16, 22.5]
       - boss#mf: { scale: 1.3 }
+        kb: { scale: 1, visible: true }
         players: { x: 80 }
         tower#mid-*: { color: url(#tower-filled-gradient) }
       - tower#*: { visible: false }
+        kb: { visible: false }
         boss#mf: { scale: 1, visible: false }
         glitch-link#*: { visible: false }
         label: { visible: false }
@@ -4820,7 +4840,13 @@ graphing:
         exaflare#2: { x: 100, y: 90 }
         exaflare#3: { x: 100, y: 45, rotate: -45 }
         exaflare#4: { x: 100, y: 0, rotate: -90 }
-        circle#[1..6]: { attach: T1, size: 60, scale: 0, visible: true }
+        circle#[1..6]: { size: 60, scale: 0, visible: true }
+        circle#1: [0, 0]
+        circle#2: [33, 175]
+        circle#3: [67, 175]
+        circle#4: [81, 149]
+        circle#5: [76, 121]
+        circle#6: [72, 89]
         circle-color#exa-[1..4]-[1..8]: { size: 60, color: url(#wc-p6-gradient) }
         circle-color#exa-1-1: [100, 135]
         circle-color#exa-2-1: [100, 90]
@@ -4853,40 +4879,40 @@ graphing:
         cast: { text: Unlimited Wave Cannon, progress: 0 }
       - cast: { progress: 0.8 }
         exaflare#1: { visible: true }
-        players: [0, 0]
+        players: { x: 0, y: 0, attach: circle#1 }
       - cast: { progress: 1, visible: false }
         exaflare#2: { visible: true }
       - exaflare#3: { visible: true }
       - exaflare#4: { visible: true }
-      - circle#1: { scale: 1, attach: null }
-      - players: [33, 175]
-      - circle#2: { scale: 1, attach: null }
+      - circle#1: { scale: 1 }
+      - players: { attach: circle#2 }
+      - circle#2: { scale: 1 }
         circle-color#exa-1-1: { visible: true }
         exaflare#1: { visible: false }
-      - players: [67, 175]
+      - players: { attach: circle#3 }
         circle#1: { visible: false }
         circle-color#[exa-1-1]: { visible: false }
         circle-color#exa-[2-1,1-2]: { visible: true }
         exaflare#2: { visible: false }
-      - circle#3: { scale: 1, attach: null }
+      - circle#3: { scale: 1 }
         circle-color#exa-[2-1,1-2]: { visible: false }
         circle-color#exa-[3-1,2-2,1-3]: { visible: true }
         circle-color#exa-1-1: [10, 135]
         exaflare#3: { visible: false }
-      - players: [81, 149]
+      - players: { attach: circle#4 }
         circle#2: { visible: false }
         circle-color#[exa-3-1, exa-2-2, exa-1-3]: { visible: false }
         circle-color#exa-[4-1,3-2,2-3,1-1]: { visible: true }
         circle-color#exa-2-1: [10, 90]
         circle-color#exa-1-2: [20, -45]
         exaflare#4: { visible: false }
-      - circle#4: { scale: 1, attach: null }
+      - circle#4: { scale: 1 }
         circle-color#exa-[4-1,3-2,2-3,1-1]: { visible: false }
         circle-color#exa-[3-3,1-2,2-1,4-2]: { visible: true }
         circle-color#exa-3-1: [10, 45]
         circle-color#exa-2-2: [20, -90]
         circle-color#exa-1-3: [50, -45]
-      - players: [76, 121]
+      - players: { attach: circle#5 }
         circle-color#exa-[1-2,2-1,3-3,4-2]: { visible: false }
         circle-color#exa-[1-3,2-2,3-1,4-3]: { visible: true }
         circle#3: { visible: false }
@@ -4894,26 +4920,26 @@ graphing:
         circle-color#exa-3-2: [20, -135]
         circle-color#exa-2-3: [50, -90]
         circle-color#exa-1-1: [80, -45]
-      - circle#5: { scale: 1, attach: null }
+      - circle#5: { scale: 1 }
         circle-color#exa-[1-3,2-2,3-1,4-3]: { visible: false }
         circle-color#exa-[1-1,2-3,3-2,4-1]: { visible: true }
         circle-color#exa-1-2: [110, -45]
         circle-color#exa-2-1: [80, -90]
         circle-color#exa-3-3: [50, -135]
         circle-color#exa-4-2: [20, 180]
-      - players: [72, 89]
+      - players: { attach: circle#6 }
         circle#4: { visible: false }
         circle-color#exa-[1-1,2-3,3-2,4-1]: { visible: false }
         circle-color#exa-[1-2,2-1,3-3,4-2]: { visible: true }
         circle-color#exa-2-2: [110, -90]
         circle-color#exa-3-1: [80, -135]
         circle-color#exa-4-3: [50, 180]
-      - circle#6: { scale: 1, attach: null }
+      - circle#6: { scale: 1 }
         circle-color#exa-[1-2,2-1,3-3,4-2]: { visible: false }
         circle-color#exa-[2-2,3-1,4-3]: { visible: true }
         circle-color#exa-3-2: [110, -135]
         circle-color#exa-4-1: [80, 180]
-      - players: [76, 60]
+      - players: { x: 76, y: 60, attach: null }
         circle#5: { visible: false }
         circle-color#exa-[2-2,3-1,4-3]: { visible: false }
         circle-color#exa-[3-2,4-1]: { visible: true }
